1Annee/tob/tps/.svn/pristine/f0/f053dc6d04b96a6139c7abf1f003258d44925204.svn-base
./allumettes/StrategieExpertTest.java:38: error: unreported exception CoupInvalideException; must be caught or declared to be thrown
		assertEquals("La prise quand le jeu ne contient que 3 allumette", 2, strategieExpert.getPrise(jeu));
		                                                                                             ^
1 error
